@@ -14,6 +14,9 @@ Next release
 - ``pyramid.wsgi.wsgiapp`` and ``pyramid.wsgi.wsgiapp2`` now raise
   ``ValueError`` when accidentally passed ``None``.
 
+- Clarify a previously-implied detail of the ``ISession.invalidate`` API
+  documentation.
+
 1.5 (2014-04-08)
 ================
 
